<resources>
    <string name="txt_intro1_title">Intro 1 Title</string>
    <string name="txt_intro1_subtitle">Intro 1 Subtitle</string>
    <string name="txt_intro2_title">Intro 2 Title</string>
    <string name="txt_intro2_subtitle">Intro 2 Subtitle</string>
    <string name="txt_intro3_title">Intro 3 Title</string>
    <string name="txt_intro3_subtitle">Intro 3 Subtitle</string>
    <string name="txt_upgrade_to">Unlock All Features</string>
    <string name="txt_premium">Premium</string>
    <string name="txt_offer_1">Colorful Edge Lighting</string>
    <string name="txt_offer_2">Customizable Border</string>
    <string name="txt_offer_3">Advanced settings</string>
    <string name="txt_offer_4">100% Ads Free</string>
    <string name="clear_cue">Clear</string>
    <string name="reject_record_permission">Please grant Record permission to use the function.</string>
    <string name="txt_discount">Discount</string>
    <string name="txt_try_free">Try it Free</string>
    <string name="txt_subscribe">Subscribe</string>
    <string name="txt_delete_notice">Are you sure to move (%d) file to the trash?</string>
    <string name="txt_edge_lighting">Edge Lighting</string>
    <string name="txt_enable_edge_light">Enable EDGE Light</string>
    <string name="txt_preset">Preset</string>
    <string name="txt_view_all">View all</string>
    <string name="txt_theme">Theme</string>
    <string name="txt_create_your_own_theme">Create your own theme</string>
    <string name="txt_setting_edge_lighting">Setting Edge Lighting</string>
    <string name="txt_color">Color</string>
    <string name="txt_effect">Effect</string>
    <string name="txt_direction">Direction</string>
    <string name="txt_four_colors">4-Colors</string>
    <string name="txt_three_colors">3-Colors</string>
    <string name="txt_two_colors">2-Colors</string>
    <string name="txt_border_shape">Border Shape</string>
    <string name="txt_animation_speed">Animation Speed</string>
    <string name="txt_border_size">Border Size</string>
    <string name="txt_bottom_radius">Bottom Radius</string>
    <string name="txt_top_radius">Top Radius</string>
    <string name="txt_border_setting">Border Setting</string>
    <string name="txt_edge_light_direction">Edge Light Direction</string>
    <string name="txt_notch_type">Notch Type</string>
    <string name="txt_clockwise_default">Clockwise (Default)</string>
    <string name="txt_anti_clockwise_default">Anti - Clockwise (Default)</string>
    <string name="txt_top_right_to_bottom_left">Top right to bottom left</string>
    <string name="txt_bottom_left_to_top_right">Bottom left to top right</string>
    <string name="txt_top_to_bottom_down">Top to bottom (Down)</string>
    <string name="txt_bottom_to_top_up">Bottom to top (Up)</string>
    <string name="txt_default">Default</string>
    <string name="txt_display_notch">Display Notch</string>
    <string name="txt_display_hole">Display Hole</string>
    <string name="txt_display_infinity">Display Infinity</string>
    <string name="txt_advanced">Advanced</string>
    <string name="txt_notch_width">Notch Width</string>
    <string name="txt_notch_height">Notch Height</string>
    <string name="txt_notch_top_radius">Notch Top Radius</string>
    <string name="txt_notch_bottom_radius">Notch Bottom Radius</string>
    <string name="txt_circle">Circle</string>
    <string name="txt_round">Round</string>
    <string name="txt_horizontal_hole_position">Horizontal hole position</string>
    <string name="txt_vertical_hole_position">Vertical hole position</string>
    <string name="txt_hole_radius">Hole radius</string>
    <string name="txt_hole_width">Hole width</string>
    <string name="txt_hole_height">Hole height</string>
    <string name="txt_infinity_u">Infinity U</string>
    <string name="txt_infinity_v">Infinity V</string>
    <string name="txt_infinity_width">Infinity Width</string>
    <string name="txt_infinity_height">Infinity Height</string>
    <string name="txt_infinity_radius_tip">Infinity Radius Tip</string>
    <string name="txt_edge">Edge</string>
    <string name="txt_wallpaper">Wallpaper</string>
    <string name="txt_setting">Setting</string>
    <string name="txt_themes">Themes</string>
    <string name="txt_magical_borders">Magical Borders</string>
    <string name="txt_static">Static</string>
    <string name="txt_most_downloaded">Most Downloaded</string>
    <string name="txt_daily_rewards">Daily Rewards</string>
    <string name="txt_trending_today">Trending Today</string>
    <string name="txt_nature">Nature</string>
    <string name="txt_abstract">Abstract</string>
    <string name="txt_top_pics">Top Pics</string>
    <string name="txt_ripple">Ripple</string>
    <string name="device_unsupported_wallpaper">Device unsupported Wallpaper</string>
    <string name="txt_set_as_wallpaper">Set as Wallpaper</string>
    <string name="txt_live_wallpaper_applied">Live wallpaper applied</string>
    <string name="an_error_has_occurred">An error has occurred</string>
    <string name="hex_code">HEX CODE</string>
    <string name="live_preview">Live Preview</string>
    <string name="apply">Apply</string>
    <string name="color_1">Color 1</string>
    <string name="color_2">Color 2</string>
    <string name="color_3">Color 3</string>
    <string name="color_4">Color 4</string>
    <string name="changes_have_been_applied">Changes have been applied</string>
    <string name="choose_from_gallery">Choose From Gallery</string>
    <string name="txt_all">All</string>
    <string name="please_try_again">Please try again</string>
    <string name="this_device_does_not_support_installing_live_wallpaper">This device does not support installing Live Wallpaper</string>
    <string name="this_device_does_not_support_setting_wallpaper">This device does not support setting Wallpaper</string>
    <string name="txt_set_live_wallpaper">Set Live Wallpaper</string>
    <string name="wallpaper_set_failed">Wallpaper set failed</string>
    <string name="wallpaper_set_success">Wallpaper set successfully</string>
    <string name="live_wallpaper_set_success">Live wallpaper set successfully</string>
    <string name="live_wallpaper_set_failed">Live wallpaper set failed</string>
    <string name="live_wallpaper_set_cancelled">Live wallpaper cancelled</string>
    <string name="txt_parallax_service">Parallax Wallpaper</string>
    <string name="home_screen">Home screen</string>
    <string name="set_wallpaper">Set wallpaper</string>
    <string name="both_home_and_lock_screen">Both home and lock screen</string>
    <string name="lock_screen">Lock screen</string>
    <string name="please_all_display_over_other_apps_to_show_edge_lighting">Please allow display over other apps to show Edge Lighting</string>
    <string name="allow">Allow</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="you_are_offline_please_connect_to_the_internet_to_continue_using_the_translation_feature">You are offline. Please connect to the internet to continue using the translation feature</string>
    <string name="check_network">Check network</string>
    <string name="txt_infinity_radius_top">Infinity Radius Top</string>
    <string name="txt_notch_bottom_fullness">Notch Bottom Fullness</string>
    <string name="txt_share_friend">Share with friends</string>
    <string name="txt_share_msg">Check out %s Application, it\'s awesome!</string>
    <string name="txt_continue">Continue</string>
    <string name="txt_try_free_trial">after trial ends.</string>
    <string name="txt_start_free_trial">Free 3-days trial</string>
    <string name="txt_try_free_trial_desc">You can cancel subscription anytime - via the Google Play app</string>
    <string name="txt_premium_title">Premium Features</string>
    <string name="txt_premium_offer_1">100% Ads-free experience</string>
    <string name="txt_premium_offer_2">VIP Feedback</string>
    <string name="txt_premium_monthly_package">Monthly</string>
    <string name="txt_premium_yearly_package">Yearly</string>
    <string name="txt_save">Save</string>
    <string name="txt_month">Month</string>
    <string name="txt_year">Year</string>
    <string name="txt_yearly_premium">Pro Yearly</string>
    <string name="txt_already_yearly_premium">Already Pro Yearly</string>
    <string name="txt_monthly_premium">Pro Monthly</string>
    <string name="txt_already_monthly_premium">Already Pro Monthly</string>
    <string name="txt_timeout_billing_load">Content cannot be loaded. Check your connection</string>
    <string name="txt_upgrade_premium">Upgrade Premium</string>
    <string name="txt_then">Then</string>
    <string name="title_today">Today</string>
    <string name="txt_yesterday">Yesterday</string>
    <string name="txt_select_all">Select all</string>
    <string name="txt_grant">Grant</string>
    <string name="txt_edge_lighting_service">EdgeLighting Wallpaper</string>
    <string name="txt_video_service">Video Wallpaper</string>
    <string name="txt_ripple_service">Ripple Wallpaper</string>
    <string name="txt_submit">Submit</string>
    <string name="txt_notification_title"> Updated - Don\'t missed It</string>
    <string name="txt_notification_content">New feature has been updated recently - Check it out!</string>
    <string name="txt_football">Football</string>
    <string name="txt_text_scroller">Text Scroller</string>
    <string name="txt_light">Light</string>
    <string name="txt_dark">Dark</string>
    <string name="txt_bakbak_one" translatable="false">Bakbak One</string>
    <string name="txt_baloo" translatable="false">Baloo</string>
    <string name="txt_cuprum" translatable="false">Cuprum</string>
    <string name="txt_galdeano" translatable="false">Galdeano</string>
    <string name="txt_impact" translatable="false">Impact</string>
    <string name="txt_mali" translatable="false">Mali</string>
    <string name="txt_molle" translatable="false">Molle</string>
    <string name="txt_optima" translatable="false">Optima</string>
    <string name="txt_ramabhadra" translatable="false">Ramabhadra</string>
    <string name="txt_roboto" translatable="false">Roboto</string>
    <string name="txt_rowdies" translatable="false">Rowdies</string>
    <string name="txt_sarala" translatable="false">Sarala</string>
    <string name="txt_secular_one" translatable="false">Secular One</string>
    <string name="txt_shlop" translatable="false">SHLOP</string>
    <string name="txt_shrikhand" translatable="false">Shrikhand</string>
    <string name="txt_sigmar" translatable="false">Sigmar</string>
    <string name="txt_anton" translatable="false">Anton</string>
    <string name="txt_spicy_rice" translatable="false">Spicy Rice</string>
    <string name="txt_sura" translatable="false">Sura</string>
    <string name="txt_tac_one" translatable="false">Tac One</string>
    <string name="txt_tiny_5" translatable="false">Tiny5</string>
    <string name="txt_tilt_warp" translatable="false">Tilt Warp</string>
    <string name="txt_titan_one" translatable="false">Titan One</string>
    <string name="txt_tinos" translatable="false">Tinos</string>
    <string name="txt_bungee" translatable="false">Bungee</string>
    <string name="txt_inter" translatable="false">Inter</string>
    <string name="txt_barlow" translatable="false">Barlow</string>
    <string name="txt_bbh_bogle" translatable="false">BBH Bogle</string>
    <string name="txt_do_hyeon" translatable="false">Do Hyeon</string>
    <string name="txt_helvetica" translatable="false">Helvetica</string>
    <string name="txt_lato" translatable="false">Lato</string>
    <string name="txt_micro_5" translatable="false">Micro 5</string>
    <string name="txt_nosifer" translatable="false">Nosifer</string>
    <string name="txt_quartz" translatable="false">Quartz MS</string>
    <string name="txt_quartz_ms" translatable="false">Quartz MS</string>
    <string name="txt_anta" translatable="false">Anta</string>
</resources>